# sandsmark-screenshot

./: CMakeLists.txt  README.md  Widget.cpp  Widget.h  main.cpp  screenshot.pro
